--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "Tidy First"]
 	path = Tidy First
 	url = https://github.com/MoonKimTeam/Tidy-First.git
+[submodule "한 권으로 읽는 컴퓨터 구조와 프로그래밍"]
+	path = 한 권으로 읽는 컴퓨터 구조와 프로그래밍
+	url = https://github.com/MoonKimTeam/The-Secret-Life-of-Programs-Understand-Computers.git
+[submodule "만들면서 배우는 클린 아키텍처"]
+	path = 만들면서 배우는 클린 아키텍처
+	url = https://github.com/MoonKimTeam/Clean-Architecture-Learning-in-the-Making.git
